syntax = "proto3";

option go_package = "proto/extra";

message ExtraTx {
  string gasPrice = 1;
  string gas = 2;
  string nonce = 3;
  string transactionIndex = 4;
  string blockHash = 5;
  repeated accessList access = 6;
  string maxFeePerGas = 7;
  string maxPriorityFeePerGas = 8;
  string maxFeePerBlobGas = 9;
  string blobVersionedHashes = 10;
}
message accessList {
  string address = 1;
}

message ExtraBlock {
  repeated uncle uncles = 1;
  string blockHash = 2;
  string gasUsed = 3;
  string gasLimit = 4;
  string difficulty = 5;
  string extraData = 6;
  string hash = 7;
  string nonce = 8;
  string miner = 9;
  string stateRoot = 10;
  string receiptsRoot = 11;
  string transactionsRoot = 12;
  string sha3Uncles = 13;
  string parentHash = 14;
  string logsBloom = 15;
}

message uncle {
  string hash = 1;
}

message ExtraReceipt{
  string logsBloom = 1;
  string root = 2;
  string effectiveGasPrice = 3;
  string cumulativeGasUsed = 4;
  string gasUsed = 5;
}
